<resources>
    <string name="app_name">TourMate</string>
    <string name="user_name">Username</string>
    <string name="user_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="tour_mate">Tour Mate</string>
    <string name="signup">SignUp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Re-enter password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="nav_close">Close</string>
    <string name="nav_open">Open</string>
</resources>