<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context="activities.LoginActivity">


    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/login"
        android:textColor="#FF69B4"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin"
        tools:layout_editor_absoluteX="30dp">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSignUpUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edittext_design"
            android:drawableStart="@drawable/ic_person"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="6dp"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSignInUserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_edittext_design"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/user_password"
            android:inputType="numberPassword"
            android:padding="6dp"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/etSignUpUserName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignInForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textStyle="italic"
            android:text="@string/forgot_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSignInUserPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLoginSignIn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button_design"
            android:padding="6dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@+id/tvSignInForgotPass" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/btnLoginSignIn">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/don_t_have_an_account"
                android:textSize="15sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSignUpSIActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/sign_up"
                android:textColor="#FF69B4"
                android:textSize="15sp"
                android:textStyle="italic"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvAccount" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>