<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/custom_toolbar_design"/>




    <TextView
        android:id="@+id/tvSignUpLoginActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/signup"
        android:padding="10dp"
        android:textColor="#ff69b4"
        android:textSize="25sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutIdSignUp"
        android:padding="30dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignUpLoginActivity">

        <!--<androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSignUpUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edittext_design"
            android:drawableStart="@drawable/ic_person"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="6dp"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="parent" />-->

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSignUpEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_edittext_design"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email"
            android:drawablePadding="5dp"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUserPassSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_edittext_design"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:padding="6dp"
            android:drawablePadding="5dp"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/etSignUpEmailAddress" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:drawablePadding="5dp"
            android:background="@drawable/custom_edittext_design"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/confirm_password"
            android:inputType="numberPassword"
            android:padding="6dp"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/etUserPassSignUp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_button_design"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="italic|bold"
            app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword"
            tools:layout_editor_absoluteX="1dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:text="@string/already_have_an_account"
                android:textStyle="italic"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSignInSUActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:text="@string/sign_in"
                android:textColor="#FF69B4"
                android:textSize="13sp"
                android:textStyle="italic|bold"
                app:layout_constraintStart_toEndOf="@+id/tvHaveAccount"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>